# FFMPEG-VideoEditing

./: pyproject.toml
src/FFMPEG_VideoEditing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ffmpeg_videoediting/: cli.py  detect.py  ffutil.py
