[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FFMPEG-VideoEditing"
version = "0.1.0"
description = "Auto-detect first chapter and thumbnail using FFmpeg."
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
ffmpeg-videoediting = "ffmpeg_videoediting.cli:main"

# 👇 These two blocks tell setuptools to look under src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
